# Code-Editor

./: LICENSE  LICENSE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml  tauri.yml
public/: splashscreen.html
src/: App.jsx  App.vue  Copilot.jsx  CustomWindow.jsx  DarkModeProvider.jsx  DirectoryItem.jsx  Editor.jsx  EditorContext.jsx  EditorProvider.jsx  ErrorContext.jsx  ErrorProvider.jsx  FileIcon.jsx  FileItem.jsx  FileOrDirectory.jsx  FileTabs.jsx  FolderSearch.jsx  FolderStructure.jsx  Footer.jsx  Git.jsx  GitHistory.jsx  InfoContext.jsx  InfoProvider.jsx  KanbanBoard.jsx  LanguageIcon.jsx  NewDirectory.jsx  NewFile.jsx  Settings.jsx  SideTabs.jsx  Terminal.jsx  TextareaCodeEditor.jsx  ThemeDialog.jsx  folder.ts  icon.ts  languageIcon.jsx  main.css  main.jsx  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  copilot.rs  editor.rs  errors.rs  git.rs  helper.rs  impls.rs  io.rs  lib.rs  logging.rs  main.rs  structs.rs  terminal.rs
src/components/: File.vue  Folder.vue  Footer.vue  Git.vue  Nav.vue  Terminal.vue  UnderWork.vue
src/stores/: editor.ts  theme.ts
src/themes/: ayu-dark.ts  dark.ts  dracula.ts  gruv-box-dark.ts  light.ts  monokai.ts  night-owl.ts  nord.ts  one-dark-pro.ts  pale-night.ts  solarized-dark.ts  solarized-light.ts  tokyo-night.ts  tomorrow-night.ts
