[package]
name = "Code-Editor"
version = "0.0.0"
description = "Code Editor"
authors = ["mukulve"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
walkdir = "2"
cached = "0.46.1"
tokio = { version = "1.28.2", features = ["full"] }
ignore = "0.4.21"
lazy_static = "1.4.0"
thiserror = "1.0"
memmap2 = "0.9.3"
# sublime_fuzzy = "0.7.0"
notify-debouncer-full = "0.3.1"
regex = "1.10.3"
git2 = "0.18.3"
reqwest = { version = "0.11", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
