[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc="*"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23.6"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-sequel = "0.3.8"
lazy_static = "1.5.0"
cached = "0.56.0"
walkdir = "2"
ignore = "0.4"
rayon = "1.10.0"
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"
thiserror = "2.0.12"
git2 = "0.20.2"
